# DEIMKit

./: .gitignore  README.md  pyproject.toml
nbs/: configs.ipynb  custom-model-inference copy.ipynb  custom-model-inference-2.ipynb  custom-model-inference.ipynb  custom_transforms.ipynb  custom_transforms.yml  custom_transforms_vechicles.yml  demo.ipynb  demo_custom_model.ipynb  exporter.ipynb  gradio_demo.py  my_custom_config.yml  my_train_config.yml  nested_config.yml  train.ipynb  train.py  train_logs.txt
scripts/: gradio_demo.py  live_inference.py  train.py
src/deim_wrapper/: __init__.py  config.py  predictor.py  visualization.py
src/deimkit/: __init__.py  config.py  dataset.py  exporter.py  predictor.py  trainer.py  utils.py
src/deimkit/engine/solver/: det_engine.py
