[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
name = "deim_wrapper"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "torch>=2.6.0,<3", "torchvision>=0.21.0,<0.22", "faster-coco-eval>=1.6.5,<2", "pyyaml>=6.0.2,<7", "tensorboard>=2.19.0,<3", "scipy>=1.15.2,<2", "calflops>=0.3.2,<0.4", "transformers>=4.49.0,<5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
deim_wrapper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipywidgets = ">=8.1.5,<9"
ipykernel = ">=6.29.5,<7"
