[project]
authors = [{ name = "dnth", email = "dickson.neoh@gmail.com" }]
name = "deimkit"
requires-python = ">= 3.10, < 3.13"
version = "0.1.0"
dependencies = [
    "faster-coco-eval>=1.6.5,<2",
    "pyyaml>=6.0.2,<7",
    "tensorboard>=2.19.0,<3",
    "scipy>=1.15.2,<2",
    "calflops>=0.3.2,<0.4",
    "transformers>=4.49.0,<5",
    "opencv-python>=4.11.0.86,<5",
    "gdown>=5.2.0,<6",
    "loguru>=0.7.3,<0.8",
    "matplotlib",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
deimkit = { path = ".", editable = true }

torch = { version = "==2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = "==0.20.1", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipywidgets = ">=8.1.5,<9"
ipykernel = ">=6.29.5,<7"
